--- a/styles/Calendar.module.scss
+++ b/styles/Calendar.module.scss
@@ -2,13 +2,18 @@
     display: flex;
     align-items: stretch;
     overflow: hidden;
-    margin-top: 30px;
     justify-content: flex-start;
     // max-width: 1100px;
     margin-bottom: 50px;
+    @media (max-width: 700px) {
+        flex-direction: column;
+    }
 }
 
 .own{
     // border: 1px solid yellowgreen;
     padding: 15px;
+    @media (max-width: 700px) {
+        padding: 0
+    }
 }
