--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -26,6 +26,7 @@
 
 .ksiegowosc{
     position: relative;
+    @include start-animation();
     .headerTitle{
         @include headerTitle();
         // margin-top: 150px;
