--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -143,6 +143,10 @@
     }
 }
 
+.buttons{
+    display: flex;
+}
+
 @media(max-width: 700px){
 .logo{
         transform: scale(0.5);
@@ -156,6 +160,9 @@
     .header{
         height: 90px;
         border: none;
+    }
+    .buttons{
+        display: none;
     }
 }
 
