--- a/styles/MenuContent.module.scss
+++ b/styles/MenuContent.module.scss
@@ -135,3 +135,12 @@ $cities-width: 450px;
     transition-duration: 0.4s;
     fill: $text-color;
 }
+
+.profilLink{
+    padding-left: 30px;
+    // font: normal normal 900 20px/35px "Work Sans Black" !important;
+}
+
+.profilLinks{
+    padding-top: 20px;
+}
