--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -4,7 +4,7 @@ $block-width: 323px;
 $block-height: 323px;
 
 @mixin block($width, $height) {
-    width: $width;
+    max-width: $width;
     height: $height;
     border: 2px solid $main-color;
     // cursor: pointer;    
@@ -12,8 +12,8 @@ $block-height: 323px;
     &:hover{
         // border-color: $text-color;
     }
-    @media (max-width: 700px){
-        width: auto;
+    @media (max-width: 850px){
+        max-width: none;
         height: auto;
     }
 }
@@ -77,6 +77,8 @@ $block-height: 323px;
 .blockMedium{
     @include block(436px, 266px);
     margin-right: 16px;
+    height: 100%;
+    z-index: 1;
 }
 
 .blockMediumNone{
