--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -5,6 +5,11 @@
     justify-content: space-between;
     margin-left: $main-margin-left;
     margin-bottom: 100px;
+    @media (max-width: 700px) {
+        flex-direction: column;
+        margin-left: 27px;
+        margin-right: 27px !important;
+    }
 }
 
 @mixin cennik-block{
@@ -25,6 +30,10 @@
         -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
         box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
     } 
+    @media (max-width: 700px) {
+        width: 100%;
+        margin-bottom: 25px;
+    }
 }
 
 .cennikBlock{
@@ -35,6 +44,9 @@
         transform: none;
         -webkit-box-shadow: none;
         box-shadow: none;
+    }
+    @media (max-width: 700px) {
+       order: 1;
     }
 }
 
@@ -48,6 +60,21 @@
         transform: none;
         -webkit-box-shadow: none;
         box-shadow: none;
+    }
+}
+
+.cennikBlock, .cennikMainBlock{
+    @media (max-width: 700px) {
+        flex-direction: row;
+        .main{
+            margin-left: 10px;
+        }
+    }
+    @media (max-width: 550px) {
+        flex-direction: column;
+        .main{
+            margin-left: 0px;
+        }
     }
 }
 
@@ -108,6 +135,11 @@
     color: $text-color;
     padding-top: 38px;
     z-index: 1;
+    text-align: center;
+    @media (max-width: 700px) {
+        padding-top: 21px;
+        font: normal normal 20px/24px "Work Sans Medium";
+    }
 }
 
 .digit{
@@ -116,6 +148,10 @@
     color: $text-color;
     padding-top: 60px;
     z-index: 1;
+    @media (max-width: 700px) {
+        padding-top: 25px;
+        font: normal normal 900 60px/33px "Work Sans Black";
+    }
 }
 
 .afterDigit{
@@ -124,6 +160,11 @@
     color: $text-color;
     padding-top: 25px;
     z-index: 1;
+    @media (max-width: 700px) {
+        padding-top: 18px;
+        padding-bottom: 25px;
+        font: normal normal 300 14px/33px "Work Sans Light";
+    }
 }
 
 .blockLinkButton{
@@ -140,6 +181,18 @@
     }
 }
 
+.main{
+    // z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    :nth-child(1){
+        margin-left: auto;
+        margin-right: auto;    
+        margin-top: 0;
+    }
+}
+
 .description{
     font: normal normal 300 16px/28px "Work Sans Light";
     letter-spacing: 0.64px;
@@ -147,4 +200,8 @@
     padding: 0 41px;
     padding-top: 50px;
     z-index: 1;
+    @media (max-width: 700px) {
+        padding: 30px 20px 0 20px;
+        font: normal normal 300 14px/28px "Work Sans Light";
+    }
 }
