--- a/styles/Dane.module.scss
+++ b/styles/Dane.module.scss
@@ -7,6 +7,11 @@
     .text{
         @include profileText();
     }
+    input{
+        @media (max-width: 700px) {
+            // margin-right: 27px;
+        }
+    }
     .buttonInput{
         // margin-top: 20px;
         flex: 1;
@@ -18,6 +23,9 @@
         &:disabled{
             background-color: white;
             cursor: auto;
+        }
+        @media (max-width: 850px) {
+            width: 100% !important;
         }
     }
     .cancelBtn{
@@ -34,22 +42,45 @@
         align-items: center;
         // padding-left: 20px;
         // padding-right: 20px;
+        @media (max-width: 850px) {
+            width: 100%;
+            margin-left: 0;
+        }
     }
     .NIP{
         flex: 1;
     }
     .threeColumns{
         display: flex;
+        @media (max-width: 850px) {
+            flex-direction: column;
+            height: 200px;
+            :nth-child(1){
+                height: 52px;
+            }
+        }
     }
     .title{
         position: relative;
+    }
+    @media (max-width: 700px) {
+        .title{
+            font: normal normal 300 36px/66px "Work Sans Light";
+            .bold{
+                font: normal normal 900 36px/66px "Work Sans Black";
+            }
+        }
     }
 }
 
 .editBtnWrapper{
     display: flex;
     justify-content: flex-end;
-    width: 791px;
+    max-width: 791px;
+    padding-right: 0px;
+    @media (max-width: 1000px) {
+        padding-right: 0;
+    }
 }
 
 .noEditFields{
@@ -70,12 +101,28 @@
         min-width: 287px;
         padding-right: 52px;
     }
+    @media (max-width: 1000px) {
+        flex-direction: column;
+        .left{
+            padding-right: 0;
+            min-width: 500px;
+        }
+    }
+    @media (max-width: 550px) {
+        .left{
+            padding-right: 0;
+            min-width: auto;
+        }
+    }
 }
 
 .editButton{
     @include buttonInput();
     // margin-top: 76px;
     margin-top: 4px;
+    @media (max-width: 1000px) {
+        width: 100%
+    }
 }
 
 .avatarUploader{
