--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -24,6 +24,9 @@
 .profileHeader{
     @include header();
     border-bottom: 2px solid $main-color;
+    @media (max-width: 700px) {
+        height: 90px
+    }
 }
 
 .header .logo{
