--- a/styles/Hiring.module.scss
+++ b/styles/Hiring.module.scss
@@ -10,15 +10,24 @@
     height: 100vh;
     position: relative;
     background-color: $main-color;   
+    @media (max-width: 1024px) {
+        height: auto;
+    }
 }
 
 .rightbar{
-    width: 520px;
+    max-width: 520px;
     height: 750px;
     background-color: $main-color;
     padding-left: 34px;
     padding-right: 180px;
     padding-top: 38px;
+    @media (max-width: 1024px) {
+        height: auto;
+        padding-right: 0;
+        // display: flex;
+        // align-items: center;
+    }
 }
 
 .rightBarTop{
@@ -27,6 +36,13 @@
     border-bottom: 1px solid #ffffff;
     padding-top: 53px;
     background-color: $main-color;   
+    @media (max-width: 1024px) {
+        background-color: #FFFFFF;
+        height: 71px;
+        padding-top: 0;
+        display: flex;
+        align-items: center;
+    }
 }
 
 .rightBarTopBtn{
@@ -69,11 +85,18 @@
     position: fixed;
     bottom: 5%;
     display: flex;
+    @media (max-width: 1024px) {
+        position: static;
+        padding-top: 30px;
+    }
 }
 
 .progressBar{
     display: flex;
     position: fixed;
+    @media (max-width: 1024px) {
+        position: static;
+    }
 }
 
 @mixin progressBarNumber{
@@ -129,6 +152,9 @@
     letter-spacing: 0px;
     color: #FFFFFF;
     text-transform: capitalize;
+    @media (max-width: 1024px) {
+        display: none;
+    }
 }
 
 .hiringChoiceProps{
@@ -138,6 +164,9 @@
 .hiringChoicesDiv{
     position: fixed;
     margin-top: 120px;
+    @media (max-width: 1024px) {
+        display: none;
+    }
 }
 
 .hiringChoice{
