--- a/styles/KontoPackages.module.scss
+++ b/styles/KontoPackages.module.scss
@@ -5,6 +5,9 @@
     width: 85%;
     justify-content: space-between;
     align-items: center;
+    @media (max-width: 700px) {
+        flex-direction: column;
+    }
     .mainPackageName{
         // font-weight: bolder;
         font-family: "Work Sans Black";
@@ -14,10 +17,18 @@
     }
     .endDate{
         margin-left: 10px;
+        @media (max-width: 700px) {
+            text-align: center;
+        }
     }
     .updateBtn{
         @include buttonInput();
         width: 250px;
+        @media (max-width: 700px) {
+            height: 35px;
+            width: 100%;
+            font: normal normal bold 14px/19px "Work Sans Black";
+        }
     }
     .linkBtn{
         @include linkButton(55px);
@@ -32,6 +43,6 @@
         margin-left: 0;
     }
     p{
-        width: 576px;
+        max-width: 576px;
     }
 }
