--- a/styles/Pakiet.module.scss
+++ b/styles/Pakiet.module.scss
@@ -13,13 +13,24 @@
     margin-right: 20%;
     margin-top: 40px;
     margin-bottom: 80px;
+    @media (max-width: 700px) {
+        flex-direction: column;
+        margin-right: 0;
+    }
 }
 
 .yourReservation{
     width: 50%;
     margin-right: 20px;
+    @media (max-width: 700px) {
+        width: 100%;
+        margin-bottom: 60px;
+    }    
 }
 
 .display{
     width: 50%;
+    @media (max-width: 700px) {
+        width: 100%;
+    }   
 }
