--- a/styles/Rozliczenia.module.scss
+++ b/styles/Rozliczenia.module.scss
@@ -14,12 +14,27 @@
         font: normal normal 900 16px/19px "Work Sans Black";
         letter-spacing: 0px;
         color: $text-color;
+        :nth-child(n){
+            padding: 0 5px;
+        }
+        .fifthRow{
+            color: $text-color
+        }
+        @media (max-width: 700px) {
+            font: normal normal 900 14px/19px "Work Sans Black";
+        }
     }
     .row{
         display: flex;
         font: normal normal 300 16px/19px "Work Sans Light";
         letter-spacing: 0px;
-        color: $text-color
+        color: $text-color;
+        :nth-child(n){
+            padding: 0 5px;
+        }
+        @media (max-width: 700px) {
+            font: normal normal 300 12px/19px "Work Sans Light";
+        }
     }
     .firstRow{
         width: 126px;
