--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -17,7 +17,7 @@ $language-taxt-width: 98px;
     // @media all and (max-width: 1024px){
     //     display: none;
     // }
-    @media all and (max-width: 700px){
+    @media all and (max-width: 1024px){
         width: auto;
         height: auto;
         border: none;
@@ -29,6 +29,10 @@ $language-taxt-width: 98px;
     display: flex;
     justify-content: center;
     align-items: center;
+    @media all and (max-width: 1024px){
+        height: 71px;
+        margin-right: 20px;
+    }
     @media all and (max-width: 700px){
         height: 92px;
         margin-right: 20px;
@@ -51,7 +55,7 @@ $language-taxt-width: 98px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    @media all and (max-width: 700px){
+    @media all and (max-width: 1024px){
         display: none;
     }
     .text{
