--- a/styles/YourReservation.module.scss
+++ b/styles/YourReservation.module.scss
@@ -13,12 +13,18 @@
             font: normal normal 900 16px/19px "Work Sans Black";
             letter-spacing: 0px;
             color: #121109;
+            @media (max-width: 700px) {
+                font: normal normal 900 14px/19px "Work Sans Black";                
+            }
         }
         .right{
             font: normal normal 300 16px/19px "Work Sans Light";
             letter-spacing: 0px;
             color: #121109;
             margin-left: 30px;
+            @media (max-width: 700px) {
+                font: normal normal 300 14px/19px "Work Sans Light";
+            }
         }
     }
 }
